--- a/package.json
+++ b/package.json
@@ -9,19 +9,35 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.22",
+    "leaflet": "^1.9.4",
+    "next": "15.5.4",
+    "nextjs-toploader": "^3.9.17",
     "react": "19.1.0",
+    "react-datepicker": "^8.7.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-floating-whatsapp": "^5.0.8",
+    "react-hot-toast": "^2.6.0",
+    "react-leaflet": "^5.0.0",
+    "react-select": "^5.10.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
